Major revision to prepare for resubmission

--- a/doc/header.tex
+++ b/doc/header.tex
@@ -44,10 +44,14 @@
 \bibliographystyle{plain}
 
 \usepackage{graphicx}
-
+\usepackage{moreverb}
 \usepackage{colortbl}
     \newcommand{\cell}[4]{%
       \begin{tabular}{c!{\color{lightgray}\vrule}c}#1 &
         #2\\\arrayrulecolor{lightgray}\hline 
         #3 & #4\\
     \end{tabular}}
+\newcommand{\fp}{f_{\rm p}}
+\newcommand{\fn}{f_{\rm n}}
+\newcommand{\tp}{t_{\rm p}}
+\newcommand{\tn}{t_{\rm n}}
