--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -11,7 +11,7 @@ that allow convenient detection of unique regions in large genomes
 like those of mammals, or in large samples of bacerial genomes. And
 none of these tools is as established as one of the popular aligners.
 
-This repository accompanies a forthcoming review on searching for
+This tutorial accompanies a forthcoming review on searching for
 unique regions in genome sequences~\cite{vie25:fas}. We survey three
 published tools for finding unique
 regions, \ty{genmap}~\cite{poc20:gen}, \ty{macle}~\cite{pir19:hig}
