--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -136,3 +136,30 @@
   volume	= 13,
   pages		= {103-107}
 }
+
+@Book{		  hau06:int,
+  author	= {Haubold, B. and Wiehe, T.},
+  title		= {Introduction to Computational Biology: An Evolutionary
+		  Approach},
+  publisher	= {Birkh\"auser},
+  year		= 2006,
+  address	= {Basel}
+}
+
+@Article{bre88:leg,
+  author = 	 {Brenner, D. J. and Steigerwalt, A. G. and Epple, P. and Bibb, W. F. and McKinney, R. M. and Starnes, R. W. and Colville, J. M. and Selander, R. K. and Edelstein, P. H. and Moss, W.},
+  title = 	 {\emph{Legionella pneumophila} serogroup {Lansing} 3 isolated from a patient with fatal pneumonia, and descriptions of \emph{. pneumophila} subsp. \emph{pneumophila} subsp. nov., \emph{L. pneumophila} subsp. \emph{fraseri} subsp. vov., and \emph{L. pneumophila} subsp. \emph{pascullei} subsp. nov.},
+  journal = 	 {Journal of Clinical Microbiology},
+  year = 	 1988,
+  key = 	 1643,
+  volume = 	 26,
+  pages = 	 {1695--1703}}
+
+@Article{via22:leg,
+  author = 	 {Viasus, D. and Gaia, V. and Manzur-Barbur, C. and Carratal\`a},
+  title = 	 {Legionnaires' disease: update on diagnosis and treatment},
+  journal = 	 {Infectious Diseases and Therapy},
+  year = 	 2022,
+  key = 	 1639,
+  volume = 	 11,
+  pages = 	 {973--986}}
