--- a/doc/sure.tex
+++ b/doc/sure.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \pagestyle{noweb}
 
-\title{\ty{sure}: Search for Unique Regions}
+\title{\ty{sure}: Search for Unique Regions, a Tutorial}
 \author{Beatriz Vieira Mourato \& Bernhard Haubold}
 \date{\input{date.txt}\!\!, \input{version.txt}}
 \maketitle
@@ -18,8 +18,9 @@
 \chapter{Query and Subject, or Target and Neighbor}\label{ch:qs}
 \input{qsSim}
 \input{qsDat}
-\chapter{\ty{fp.awk}: Calculate the False Prediction Rate}
-\input{fp}
+\chapter{Auxiliary Programs}
+\input{sp}
+\input{acc}\label{sec:acc}
 
 \bibliography{ref}
 \end{document}
