--- a/doc/sure.tex
+++ b/doc/sure.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \pagestyle{noweb}
 
-\title{\ty{sure}: Search for Unique Regions, a Tutorial}
+\title{\ty{sure}: Searching for Unique Regions, a Tutorial}
 \author{Beatriz Vieira Mourato \& Bernhard Haubold}
 \date{\input{date.txt}\!\!, \input{version.txt}}
 \maketitle
